2D Game light demo v.0.2

--- a/pages/game_2d_light_demo.html
+++ b/pages/game_2d_light_demo.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Demos - 2D Game Light</title>    
     <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/util.js"></script>
     <script src="../js/according.js"></script>    
+    <script src="../js/shapegenerator.js"></script>
+    <script src="../js/coordmath.js"></script>
     <script src="../js/game_2d_light_demo.js"></script>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/visibility_2d.css" />
@@ -13,7 +16,7 @@
   	
     <div class="header-wrapper">      
       <div class="header-demo-title-wrapper">2D Game Light demo</div>
-      <div class="header-demo-create-date-wrapper">(2019.05.16.)</div>
+      <div class="header-demo-create-date-wrapper">(2019.05.16.) Click mouse left button on the light source, and move the light with mouse.</div>
       <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
     </div>
 
