--- a/pages/template.html
+++ b/pages/template.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Demos - Template</title>    
     <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/util.js"></script>
     <script src="../js/according.js"></script>
+    <script src="../js/coordmath.js"></script>
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
