--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="demo-link-wrapper"><a href="pages/sorting_algorithm.html">1. Sorting algorithms</a></div>
       <div class="demo-link-wrapper"><a href="pages/line_interesting.html">2. Line intersect</a></div>
       <div class="demo-link-wrapper"><a href="pages/visibility_2d.html">3. 2D Visibility and Light demo (no optimization)</a></div>
-      <div class="demo-link-wrapper"><a href="pages/game_2d_light_demo.html">4. 2D Game light demo</a></div>
+      <div class="demo-link-wrapper"><a href="pages/game_2d_light_demo.html">4. 2D Game light graphics demo</a></div>
 
     </div>
 
