--- a/pages/visibility_2d.html
+++ b/pages/visibility_2d.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>2d Visibility</title>    
     <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/util.js"></script>
     <script src="../js/according.js"></script>
+    <script src="../js/coordmath.js"></script>
     <script src="../js/visibility_2d.js"></script>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/visibility_2d.css" />
