--- a/pages/game_2d_light_demo.html
+++ b/pages/game_2d_light_demo.html
@@ -16,7 +16,7 @@
   	
     <div class="header-wrapper">      
       <div class="header-demo-title-wrapper">2D Game Light demo</div>
-      <div class="header-demo-create-date-wrapper">(2019.05.16.) Click mouse left button on the light source, and move the light with mouse.</div>
+      <div class="header-demo-create-date-wrapper">(2019.05.16.) Click mouse left button on the light source, and move the light with mouse. The rays of light calculated with all map shapes. This is not an optimum solution.</div>
       <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
     </div>
 
