--- a/pages/perfect_maze_generator_animated.html
+++ b/pages/perfect_maze_generator_animated.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Demos - Maze generator</title>    
+    <title>Demos - Animated perfect maze generator</title>    
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/util.js"></script>
     <script src="../js/according.js"></script>    
-    <script src="../js/perfect_maze_generator.js"></script>
+    <script src="../js/perfect_maze_generator_animated.js"></script>
     <link rel="stylesheet" href="../css/visibility_2d.css" />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
-  <body onload="init_maze_generator();">
+  <body onload="init_animated_maze_generator();">
   	
     <div class="header-wrapper">      
-      <div class="header-demo-title-wrapper">Perfect maze generator</div>
-      <div class="header-demo-create-date-wrapper">(2019.05.23.)</div>
+      <div class="header-demo-title-wrapper">Animated perfect maze generator</div>
+      <div class="header-demo-create-date-wrapper">(2019.05.24.)</div>
       <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
     </div>
 
