--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       
       <div class="demo-link-wrapper"><a href="pages/sorting_algorithm.html">1. Sorting algorithms</a></div>
       <div class="demo-link-wrapper"><a href="pages/line_interesting.html">2. Line intersect</a></div>
-      <div class="demo-link-wrapper"><a href="pages/visibility_2d.html">3. 2D Visibility and Light demo (no optimization)</a></div>
-      <div class="demo-link-wrapper"><a href="pages/game_2d_light_demo.html">4. 2D Game light graphics demo</a></div>
-      <div class="demo-link-wrapper"><a href="pages/game_2d_light_with_matrix.html">5. 2D Game light with matrix</a></div>
+      <div class="demo-link-wrapper"><a href="pages/visibility_2d.html">3. 2D Light (and AI visibility) demo (no optimalizated)</a></div>
+      <div class="demo-link-wrapper"><a href="pages/game_2d_light_demo.html">4. 2D Game light graphics with vertex environment (no optimalizated)</a></div>
+      <div class="demo-link-wrapper"><a href="pages/game_2d_light_with_matrix.html">5. 2D Game light with matrix environment (full optimalizated)</a></div>
       <div class="demo-link-wrapper"><a href="pages/perfect_maze_generator.html">6. Perfect maze generator</a></div>
+      <div class="demo-link-wrapper"><a href="pages/perfect_maze_generator_animated.html">7. Animated perfect maze generator</a></div>
 
     </div>
 
