--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
       <div class="demo-link-wrapper"><a href="pages/game_2d_light_with_matrix.html">5. 2D Game light with matrix environment (full optimalizated)</a></div>
       <div class="demo-link-wrapper"><a href="pages/perfect_maze_generator.html">6. Perfect maze generator</a></div>
       <div class="demo-link-wrapper"><a href="pages/perfect_maze_generator_animated.html">7. Animated perfect maze generator</a></div>
+      <div class="demo-link-wrapper"><a href="pages/dungeon_generator.html">8. Dungeon generator</a></div>
 
     </div>
 
     <div class="body-ending-div"></div>      
     <div class="footer-wrapper">
-      <div class="footer-text-wrapper">Developed by <b>axtros</b>, 2018-<span id="current_year">0000</span>. E-mail: <a href="mailto:axtros@gmail.com">axtros@gmail</a></div>
+      <div class="footer-text-wrapper">Developed by <b>axtros</b>, 2018-<span id="current_year">0000</span>. E-mail: <a href="mailto:axtros@gmail.com">axtros@gmail.com</a></div>
     </div>
 
     <script>
