--- a/pages/perfect_maze_generator.html
+++ b/pages/perfect_maze_generator.html
@@ -21,14 +21,14 @@
     <!-- ================================================================== -->
 
     <div class="canvas-system-wrapper">
-      <canvas id="maze-canvas-id" class="maze-canvas-class" width="410" height="410" style="z-index: 1;"></canvas>      
+      <canvas id="maze-canvas-id" class="maze-canvas-class" width="210" height="210" style="z-index: 1;"></canvas>
     </div>
 
     <!-- ================================================================== -->  	
 
     <div class="body-ending-div"></div>      
     <div class="footer-wrapper">
-      <div class="footer-text-wrapper">Developed by <b>axtros</b>, 2018-<span id="current_year">0000</span>. E-mail: <a href="mailto:axtros@gmail.com">axtros@gmail</a></div>
+      <div class="footer-text-wrapper">Developed by <b>axtros</b>, 2018-<span id="current_year">0000</span>. E-mail: <a href="mailto:axtros@gmail.com">axtros@gmail.com</a></div>
     </div>
 
     <script>
