--- a/pages/visibility_2d.html
+++ b/pages/visibility_2d.html
@@ -31,7 +31,7 @@
 
     <div class="body-ending-div"></div>      
     <div class="footer-wrapper">
-      <div class="footer-text-wrapper">Developed by <b>axtros</b>, 2018-<span id="current_year">0000</span>. E-mail: <a href="mailto:axtros@gmail.com">axtros@gmail</a></div>
+      <div class="footer-text-wrapper">Developed by <b>axtros</b>, 2018-<span id="current_year">0000</span>. E-mail: <a href="mailto:axtros@gmail.com">axtros@gmail.com</a></div>
     </div>
 
     <script>
