--- a/pages/isometric_map.html
+++ b/pages/isometric_map.html
@@ -2,26 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Demos - Dungeon generator</title>    
+    <title>Demos - Isometric map</title>    
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/util.js"></script>
     <script src="../js/according.js"></script>    
     <script src="../js/dungeon_generator.js"></script>
+    <script src="../js/isometric_map.js"></script>
     <link rel="stylesheet" href="../css/visibility_2d.css" />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
-  <body onload="init_dungeon_generator();">
+  <body onload="init_isometric_map();">
   	
     <div class="header-wrapper">      
-      <div class="header-demo-title-wrapper">Dungeon generator</div>
-      <div class="header-demo-create-date-wrapper">(2019.05.27.)</div>
+      <div class="header-demo-title-wrapper">Isometric map</div>
+      <div class="header-demo-create-date-wrapper">(2019.05.28.)</div>
       <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
     </div>
 
     <!-- ================================================================== -->
 
     <div class="canvas-system-wrapper">
-      <canvas id="maze-canvas-id" class="maze-canvas-class" width="210" height="210" style="z-index: 1;"></canvas>
+      <canvas id="map-canvas-id" class="maze-canvas-class" width="1260" height="630" style="z-index: 100;"></canvas>
+      <canvas id="mouse-canvas-id" class="maze-canvas-class" width="1260" height="630" style="z-index: 200;" onmousemove="mouseCursorPos(event);"></canvas>
     </div>
 
     <!-- ================================================================== -->  	
