--- a/pages/isometric_map.html
+++ b/pages/isometric_map.html
@@ -21,7 +21,7 @@
 
     <!-- ================================================================== -->
 
-    <div class="canvas-system-wrapper">
+    <div class="canvas-system-wrapper"> <!-- 1260, 630 -->
       <canvas id="map-canvas-id" class="maze-canvas-class" width="1260" height="630" style="z-index: 100;"></canvas>
       <canvas id="mouse-canvas-id" class="maze-canvas-class" width="1260" height="630" style="z-index: 200;" onmousemove="mouseCursorPos(event);"></canvas>
     </div>
