--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="demo-link-wrapper"><a href="pages/perfect_maze_generator_animated.html">7. Animated perfect maze generator</a></div>
       <div class="demo-link-wrapper"><a href="pages/dungeon_generator.html">8. Dungeon generator</a></div>
       <div class="demo-link-wrapper"><a href="pages/isometric_map.html">9. Isometric map</a></div>
+      <div class="demo-link-wrapper"><a href="pages/pathfind.html">10. Pathfind with A* algorithm</a></div>
 
     </div>
 
