Idndey felület fejlesztése. WebGL bevezetése.

--- a/pages/hexagons_1.html
+++ b/pages/hexagons_1.html
@@ -6,13 +6,13 @@
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/coordmath.js"></script>
     <script src="../js/util.js"></script>    
-    <script src="../js/hexagons.js"></script>
+    <script src="../js/hexagons_1.js"></script>
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body onload="initHexagons();">
   	
     <div class="header-wrapper">      
-      <div class="header-demo-title-wrapper">Hexagons</div>
+      <div class="header-demo-title-wrapper">Hexagon tanulmányok 1</div>
       <div class="header-demo-create-date-wrapper">(2019.10.04.)</div>
       <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
     </div>
