--- a/pages/webgl/draw_point_1.html
+++ b/pages/webgl/draw_point_1.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>WebGL - Draw point #1</title>
     <script src="../../js/jquery-3.3.1.min.js"></script>
+    <script src="../../js/webGL/shaders/webgl_shaders.js"></script>
     <script src="../../js/webGL/webgl_common.js"></script>
     <script src="../../js/webGL/webgl_draw_point_1.js"></script>
     <link rel="stylesheet" href="../../css/main.css" />    
-    <link rel="stylesheet" href="../../css/webgl_main.css" />    
+    <link rel="stylesheet" href="../../css/webgl_main.css" />
   </head>
   <body onload="main()">
   	
