webgl pont és shader tanulmányok

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <div class="link-separator"></div>
       
       <div class="link-wrapper demo-link-wrapper"><a href="pages/webgl/draw_point_1.html">1. Draw point #1</a></div>
+      <div class="link-wrapper demo-link-wrapper"><a href="pages/webgl/draw_point_2.html">1. Draw point #2</a></div>
     </div></html>
 
 
