Refactoring. Template page redesign. Fixeds.

--- a/pages/demos/dungeon_generator.html
+++ b/pages/demos/dungeon_generator.html
@@ -3,25 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Demos - Dungeon generator</title>    
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/util.js"></script>
-    <script src="../js/according.js"></script>    
-    <script src="../js/dungeon_generator.js"></script>
-    <link rel="stylesheet" href="../css/visibility_2d.css" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <script src="../../js/libs/jquery-3.3.1.min.js"></script>
+    <script src="../../js/demos/util.js"></script>
+    <script src="../../js/demos/according.js"></script>    
+    <script src="../../js/demos/dungeon_generator.js"></script>
+    <link rel="stylesheet" href="../../css/visibility_2d.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
   </head>
   <body onload="init_dungeon_generator();">
   	
     <div class="header-wrapper">      
       <div class="header-demo-title-wrapper">Dungeon generator</div>
       <div class="header-demo-create-date-wrapper">(2019.05.27.)</div>
-      <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
+      
+      <div class="canvas-button-wrapper">
+        <input type="button" value="Refresh page" class="refres-page-button" onclick="location.reload();" />
+      </div>
+      
+      <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
     <!-- ================================================================== -->
 
     <div class="canvas-system-wrapper">
-      <canvas id="maze-canvas-id" class="maze-canvas-class" width="210" height="210" style="z-index: 1;"></canvas>
+      <canvas id="maze-canvas-id" class="maze-canvas-class" width="610" height="610" style="z-index: 1;"></canvas>
     </div>
 
     <!-- ================================================================== -->  	
