--- a/pages/demos/hexagons_1.html
+++ b/pages/demos/hexagons_1.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Demos - Hexagons</title>
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/coordmath.js"></script>
-    <script src="../js/util.js"></script>    
-    <script src="../js/hexagons_2.js"></script>
-    <link rel="stylesheet" href="../css/main.css" />
+    <script src="../../js/libs/jquery-3.3.1.min.js"></script>
+    <script src="../../js/demos/coordmath.js"></script>
+    <script src="../../js/demos/util.js"></script>    
+    <script src="../../js/demos/hexagons_1.js"></script>
+    <link rel="stylesheet" href="../../css/main.css" />
   </head>
   <body onload="initHexagons();">
   	
     <div class="header-wrapper">      
-      <div class="header-demo-title-wrapper">Hexagon tanulmányok 2</div>
+      <div class="header-demo-title-wrapper">Hexagon tanulmányok 1</div>
       <div class="header-demo-create-date-wrapper">(2019.10.04.)</div>
-      <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
+      <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
     <!-- ================================================================== -->
 
     <div class="canvas-system-wrapper">
-      <canvas id="hexagon-canvas-id" class="hexagon-canvas-class" width="400" height="400" style="z-index: 1;" onmousemove="getMousePos(event);"></canvas>
+      <canvas id="hexagon-canvas-id" class="hexagon-canvas-class" width="400" height="400" style="z-index: 1;"></canvas>
     </div>
 
     <!-- ================================================================== -->  	
