--- a/pages/demos/template.html
+++ b/pages/demos/template.html
@@ -2,29 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>WebGL - Draw point #1</title>
+    <title>Demos - Template</title>    
     <script src="../../js/libs/jquery-3.3.1.min.js"></script>
-    <script src="../../js/webGL/webgl_shaders.js"></script>
-    <script src="../../js/webGL/webgl_common.js"></script>
-    <script src="../../js/webGL/webgl_draw_point_2.js"></script>
-    <link rel="stylesheet" href="../../css/main.css" />    
-    <link rel="stylesheet" href="../../css/webgl_main.css" />
+    <script src="../../js/demos/util.js"></script>
+    <script src="../../js/demos/according.js"></script>
+    <script src="../../js/demos/coordmath.js"></script>
+    <link rel="stylesheet" href="../css/main.css" />
   </head>
-  <body onload="main()">
+  <body>
   	
     <div class="header-wrapper">      
-      <div class="header-demo-title-wrapper">WebGL - Draw multiple point with mouse click. Please click mouse left button on the canvas.</div>
-      <div class="header-demo-create-date-wrapper">(2020.01.10.)</div>
+      <div class="header-demo-title-wrapper">Demo name</div>
+      <div class="header-demo-create-date-wrapper">(2020.01.15.)</div>
+      
+      <div class="canvas-button-wrapper">
+        <input type="button" value="Refresh page" class="refres-page-button" onclick="location.reload();" />
+      </div>
+      
       <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
     <!-- ================================================================== -->
 
-    <div class="canvas-system-wrapper">
-      <canvas id="webgl_canvas" class="webgl-canvas-class" width="400" height="400" style="z-index: 1;">
-        Please use a browser that supports "canvas"!
-      </canvas>
-    </div>
+    Template page!
 
     <!-- ================================================================== -->  	
 
