--- a/pages/demos/game_2d_light_demo.html
+++ b/pages/demos/game_2d_light_demo.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Demos - 2D Game Light</title>    
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/util.js"></script>
-    <script src="../js/according.js"></script>    
-    <script src="../js/shapegenerator.js"></script>
-    <script src="../js/coordmath.js"></script>
-    <script src="../js/game_2d_light_demo.js"></script>
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/visibility_2d.css" />
+    <script src="../../js/libs/jquery-3.3.1.min.js"></script>
+    <script src="../../js/demos/util.js"></script>
+    <script src="../../js/demos/according.js"></script>    
+    <script src="../../js/demos/shapegenerator.js"></script>
+    <script src="../../js/demos/coordmath.js"></script>
+    <script src="../../js/demos/game_2d_light_demo.js"></script>
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/visibility_2d.css" />
   </head>
   <body onload="visibility2D_init();">
   	
     <div class="header-wrapper">      
       <div class="header-demo-title-wrapper">2D Game Light demo</div>
       <div class="header-demo-create-date-wrapper">(2019.05.16.) Click mouse left button on the light source, and move the light with mouse. The rays of light calculated with all map shapes. This is not an optimum solution.</div>
-      <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
+      <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
     <!-- ================================================================== -->
