--- a/pages/demos/perfect_maze_generator_animated.html
+++ b/pages/demos/perfect_maze_generator_animated.html
@@ -3,26 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Demos - Animated perfect maze generator</title>    
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/util.js"></script>
-    <script src="../js/according.js"></script>    
-    <script src="../js/perfect_maze_generator_animated.js"></script>
-    <link rel="stylesheet" href="../css/visibility_2d.css" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <script src="../../js/libs/jquery-3.3.1.min.js"></script>
+    <script src="../../js/demos/util.js"></script>
+    <script src="../../js/demos/according.js"></script>    
+    <script src="../../js/demos/perfect_maze_generator_animated.js"></script>
+    <link rel="stylesheet" href="../../css/visibility_2d.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
   </head>
   <body onload="init_animated_maze_generator();">
   	
     <div class="header-wrapper">      
       <div class="header-demo-title-wrapper">Animated perfect maze generator</div>
       <div class="header-demo-create-date-wrapper">(2019.05.24.)</div>
-      <div class="header-demo-backlink-wrapper"><a href="../index.html">[ back ]</a></div>
+
+      <div class="canvas-button-wrapper">
+        <input type="button" value="Refresh page" class="refres-page-button" onclick="location.reload();" />
+      </div>
+
+      <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
     <!-- ================================================================== -->
 
     <div class="canvas-system-wrapper">
       <canvas id="maze-canvas-id" class="maze-canvas-class" width="410" height="410" style="z-index: 1;"></canvas>      
-    </div>
+    </div>    
 
     <!-- ================================================================== -->  	
 
