--- a/pages/webgl/draw_point_1.html
+++ b/pages/webgl/draw_point_1.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>WebGL - Draw point #1</title>
-    <script src="../../js/jquery-3.3.1.min.js"></script>
-    <script src="../../js/webGL/shaders/webgl_shaders.js"></script>
+    <script src="../../js/libs/jquery-3.3.1.min.js"></script>
+    <script src="../../js/webGL/webgl_shaders.js"></script>
     <script src="../../js/webGL/webgl_common.js"></script>
     <script src="../../js/webGL/webgl_draw_point_1.js"></script>
     <link rel="stylesheet" href="../../css/main.css" />    
@@ -15,7 +15,7 @@
     <div class="header-wrapper">      
       <div class="header-demo-title-wrapper">WebGL - Draw point #1</div>
       <div class="header-demo-create-date-wrapper">(2020.01.08.)</div>
-      <div class="header-demo-backlink-wrapper"><a href="../../index.html">[ back ]</a></div>
+      <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
     <!-- ================================================================== -->
