--- a/pages/webgl/webgl_basic_transformations.html
+++ b/pages/webgl/webgl_basic_transformations.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>WebGL - Draw point #1</title>
+    <title>WebGL - Basic transformation</title>
     <script src="../../js/libs/jquery-3.3.1.min.js"></script>
     <script src="../../js/webGL/webgl_shaders.js"></script>
     <script src="../../js/webGL/webgl_common.js"></script>
-    <script src="../../js/webGL/webgl_draw_point_2.js"></script>
+    <script src="../../js/webGL/webgl_multiple_point_triangle_vertexbuffer.js"></script>
     <link rel="stylesheet" href="../../css/main.css" />    
     <link rel="stylesheet" href="../../css/webgl_main.css" />
   </head>
   <body onload="main()">
   	
     <div class="header-wrapper">      
-      <div class="header-demo-title-wrapper">WebGL - Draw multiple point with mouse click. Please click mouse left button on the canvas.</div>
-      <div class="header-demo-create-date-wrapper">(2020.01.10.)</div>
+      <div class="header-demo-title-wrapper">WebGL - Basic transformation</div>
+      <div class="header-demo-create-date-wrapper">(2020.01.14.)</div>
       <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
     </div>
 
