--- a/pages/demos/pathfind_sandbox.html
+++ b/pages/demos/pathfind_sandbox.html
@@ -9,7 +9,7 @@
     <script src="../../js/demos/util.js"></script>
     <script src="../../js/demos/according.js"></script>
     <script src="../../js/demos/coordmath.js"></script>
-    <script src="../../js/pathfind_sandbox/build/pathfinder.js"></script>        
+    <script src="../../js/pathfind_sandbox/build/pathfinder.js"></script>    
     <link rel="stylesheet" href="../../css/visibility_2d.css" />
     <link rel="stylesheet" href="../../css/main.css" />
   </head>
@@ -20,7 +20,9 @@
       <div class="header-demo-create-date-wrapper">(05/03/2020)</div>
       
       <div class="canvas-button-wrapper">
-        <input type="button" value="Refresh page" class="refres-page-button" onclick="location.reload();" />
+        <input type="button" value="Refresh" class="refres-page-button" onclick="location.reload();" />
+        <input type="button" value="Start" class="refres-page-button" onclick="main.startAStar();" />
+        <input type="button" value="Console" class="refres-page-button" onclick="main.printMapToConsole();" />
       </div>
       
       <div class="header-demo-backlink-wrapper"><a href="../../index.html"><img border="0" alt="back to index page" title="Back to index page" src="../../img/back_icon_32x32.png" width="28" height="28"></a></div>
